Added async tasks, improved UI for view controller

--- a/app/templates/alert_dialog/index.hbs
+++ b/app/templates/alert_dialog/index.hbs
@@ -5,7 +5,7 @@
           {{#link-to 'viewController' viewController class="btn btn-default btn-sm"}}
             <i class="fa fa-mail-reply"></i>
           {{/link-to}} 
-          {{name}}
+          <i class="fa fa-bell"></i> {{name}}
         </h3>
       </div>
       <div class="panel-body">
