--- a/app/templates/async_task/index.hbs
+++ b/app/templates/async_task/index.hbs
@@ -5,7 +5,7 @@
           {{#link-to 'viewController' viewController class="btn btn-default btn-sm"}}
             <i class="fa fa-mail-reply"></i>
           {{/link-to}} 
-          <i class="fa fa-spinner"></i> {{name}}
+          <i class="fa fa-history"></i> {{name}}
         </h3>
       </div>
       <div class="panel-body">
@@ -17,11 +17,6 @@
         <div class="tab-content">
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
-            {{input-text label="Title" value=title action='acceptChanges'}}
-            {{input-text label="Message" value=message action='acceptChanges'}}
-            <label {{bind-attr class=":btn :btn-default :btn-block spinner:active"}}>
-              {{input type="checkbox" checked=spinner class="hidden"}} <i class="fa fa-spinner"></i> With spinner
-            </label>
           </div>
         </div>
         
