Added icon to model generation

--- a/app/templates/editor.hbs
+++ b/app/templates/editor.hbs
@@ -23,7 +23,7 @@
       </div>
       <div class="col-md-4">
         <div class="pull-right">
-          <button class="btn btn-default" {{action 'generateAppModel'}}>Model</button>
+          <button class="btn btn-default" {{action 'generateAppModel'}}><i class="fa fa-download"></i> Model</button>
         </div>
       </div>
     </div>
