--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,3 +1,25 @@
-<div class="well">
-    Protocode
+<h1>Protoc<i class="fa fa-code"></i>de <small>From idea to mobile app</small></h1>
+<div class="row">
+  <div class="col-md-4">
+    <div class="well text-center">
+      <i class="fa fa-5x fa-lightbulb-o"></i> <i class="fa fa-5x fa-pencil"></i>
+      <h4>Make your app with Protoc<i class="fa fa-code"></i>de</h4>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="well text-center">
+      <i class="fa fa-5x fa-magic"></i> <i class="fa fa-5x fa-cubes"></i>
+      <h4>Generate the model</h4>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="well text-center">
+      <i class="fa fa-5x fa-apple"></i>
+      <i class="fa fa-5x fa-angle-left"></i> 
+      <i class="fa fa-5x fa-mobile"></i> 
+      <i class="fa fa-5x fa-angle-right"></i> 
+      <i class="fa fa-5x fa-android"></i>
+      <h4>Have fun with native mobile apps!</h4>
+    </div>
+  </div>
 </div>
